[gd_scene load_steps=4 format=3 uid="uid://c2x4v6w8y0a2d"]

[ext_resource type="Script" path="res://scripts/LoginScreen.gd" id="1_1q3vm"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/login_bg.png" id="2_login_bg"]
[ext_resource type="Texture2D" path="res://assets/button_backgrounds/login_btn.png" id="3_login_btn"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1q3vm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_login_bg")
expand_mode = 1

[node name="UIContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonContainer" type="VBoxContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 350.0
offset_right = 250.0
offset_bottom = 650.0

[node name="GuestLoginButton" type="TextureButton" parent="UIContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
texture_normal = ExtResource("3_login_btn")
expand_mode = 0
stretch_mode = 4

[connection signal="pressed" from="UIContainer/ButtonContainer/GuestLoginButton" to="." method="_on_guest_login_button_pressed"]